A ton of simple formatting issues highlighted by IntelliJ